GNOME Bugzilla – Bug 644016
Git tasks do not show up translated
Last modified: 2011-11-21 19:58:57 UTC
The tasks in the Git tasks window are translated in the po file, yet they do not show up translated on the UI.
Created attachment 182603 [details] [review] Invoke gettext on static array items
Review of attachment 182603 [details] [review]: Does that fix things for you? It looks unlikely to me that adding _() around that entry would be it translatable. I checked the strings that are defined in git/plugin.c and those are all surrounded by _N() which seems to be ok.
Created attachment 182639 [details] Screenshot of the solution Sure, it works :) As we all know, N_() is just an alias for gettext_noop, and we need to call gettext() (alias: _() ) when we actually use the arrays items. See also: http://www.gnu.org/software/gettext/manual/gettext.html#Special-cases
Sorry, forgot about this one! It is now applied in master! Thanks for your work and please feel free to ping on bugs with no response for a while in the future!