Make the tasks in the Git tasks window show up translated.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=644016