libanjuta/anjuta-command-bar.h
@@ -22,6 +22,7 @@
 
 #include <glib-object.h>
 #include <gtk/gtk.h>
+#include <glib/gi18n.h>
 
 G_BEGIN_DECLS
 
